Add elasticsearch-curator tool in sfinfo
Change-Id: I44abb59ee32b6f6ea8a303019fed9cd5932cfa52

--- a/sf-master.yaml
+++ b/sf-master.yaml
@@ -454,6 +454,9 @@ packages:
     source: external
   - name: software-factory/python-voluptuous
     source: external
+  # EL curator
+  - name: software-factory/elasticsearch-curator
+    source: external
 
 # Epel import
   - name: software-factory/acme-tiny
