Use new koji urls
Change-Id: I110885d7729eead69158640fedb5a569cdc4b85e

--- a/sf-2.6.yaml
+++ b/sf-2.6.yaml
@@ -3,7 +3,7 @@ name: software-factory
 
 koji-target: sf-2.6-el7
 arch: x86_64
-koji-url: http://koji.softwarefactory-project.io/kojifiles/repos/sf-2.6-el7-build/latest/x86_64/
+koji-url: http://softwarefactory-project.io/kojifiles/repos/sf-2.6-el7-build/latest/x86_64/
 branch: 2.6
 packages:
   - name: software-factory/sf-web-assets
