--- a/sf-master.yaml
+++ b/sf-master.yaml
@@ -3,7 +3,7 @@ name: software-factory
 
 koji-target: sf-master-el7
 arch: x86_64
-koji-url: http://koji.softwarefactory-project.io/kojifiles/repos/sf-master-el7-build/latest/x86_64/
+koji-url: http://softwarefactory-project.io/kojifiles/repos/sf-master-el7-build/latest/x86_64/
 branch: master
 packages:
   - name: software-factory/sf-web-assets
