--- a/sf-master.yaml
+++ b/sf-master.yaml
@@ -2,6 +2,7 @@
 name: software-factory
 
 koji-target: sf-master-el7
+signing_key: 1c3bae4b
 arch: x86_64
 koji-url: http://softwarefactory-project.io/kojifiles/repos/sf-master-el7-build/latest/x86_64/
 branch: master
