--- a/sf-2.6.yaml
+++ b/sf-2.6.yaml
@@ -4,7 +4,7 @@ name: software-factory
 koji-target: sf-2.6-el7
 signing_key: 1c3bae4b
 arch: x86_64
-koji-url: http://softwarefactory-project.io/kojifiles/repos/sf-2.6-el7-build/latest/x86_64/
+koji-url: https://softwarefactory-project.io/kojifiles/repos/sf-2.6-el7-build/latest/x86_64/
 branch: 2.6
 packages:
   - name: software-factory/sf-web-assets
