--- a/sf-master.yaml
+++ b/sf-master.yaml
@@ -802,11 +802,12 @@ baserepos:
     kojipriority: 9
 
 extrarepos:
-  - name: openstack-newton
-    baseurl: http://mirror.centos.org/centos/7/cloud/x86_64/openstack-newton/
+  - name: openstack-pike
+    baseurl: http://mirror.centos.org/centos/7/cloud/x86_64/openstack-pike/
     gpgkey: file:///etc/pki/rpm-gpg/RPM-GPG-KEY-CentOS-SIG-Cloud
     gpgcheck: 1
-    kojipriority: 13
+    kojipriority: 5
+
   - name: centos-opstools
     baseurl: http://mirror.centos.org/centos/7/opstools/x86_64/
     gpgkey: file:///etc/pki/rpm-gpg/RPM-GPG-KEY-CentOS-SIG-OpsTools
