Comment empty repo from the sf-2.7.yaml + some small fixes
Change-Id: Id909b4c13d46277cac2406f48121acf4a4cbdd5f
Co-Authored-By: Nicolas Hicher <nhicher@redhat.com>

--- a/sf-2.7.yaml
+++ b/sf-2.7.yaml
@@ -30,18 +30,18 @@ packages:
     source: internal
     spec: included
 
-  - name: software-factory/sf-selinux
-    source: internal
-    spec: included
+#  - name: software-factory/sf-selinux
+#    source: internal
+#    spec: included
 
 # rh-python35 scl
   - name: scl/enable-py3
     source: external
     scl: rh-python35
 
-  - name: scl/python-setuptools
-    source: external
-    scl: rh-python35
+#  - name: scl/python-setuptools
+#    source: external
+#    scl: rh-python35
 
   - name: scl/python-pytest-runner
     source: external
