--- a/sf-2.7.yaml
+++ b/sf-2.7.yaml
@@ -30,18 +30,18 @@ packages:
     source: internal
     spec: included
 
-  - name: software-factory/sf-selinux
-    source: internal
-    spec: included
+#  - name: software-factory/sf-selinux
+#    source: internal
+#    spec: included
 
 # rh-python35 scl
   - name: scl/enable-py3
     source: external
     scl: rh-python35
 
-  - name: scl/python-setuptools
-    source: external
-    scl: rh-python35
+#  - name: scl/python-setuptools
+#    source: external
+#    scl: rh-python35
 
   - name: scl/python-pytest-runner
     source: external
@@ -459,9 +459,6 @@ packages:
     source: external
     scl: rh-python35
   - name: scl/python-flask-frozen
-    source: external
-    scl: rh-python35
-  - name: scl/python-alembic
     source: external
     scl: rh-python35
   - name: scl/python-flask-migrate
