--- a/sf-master.yaml
+++ b/sf-master.yaml
@@ -699,6 +699,9 @@ packages:
   - name: software-factory/hydrant
     source: internal
     spec: included
+  # firehooks dependencies
+  - name: software-factory/python-taiga
+    source: external
   # python-grafyaml (from fedora)
   - name: software-factory/python-grafyaml
     source: external
