Add package for firehooks
TG-676 #in-progress

Change-Id: Ida9931e5b5baa0fa44a473c8fc203952ed147db7

--- a/sf-master.yaml
+++ b/sf-master.yaml
@@ -702,6 +702,9 @@ packages:
   # firehooks dependencies
   - name: software-factory/python-taiga
     source: external
+  - name: software-factory/firehooks
+    source: internal
+    spec: included
   # python-grafyaml (from fedora)
   - name: software-factory/python-grafyaml
     source: external
