--- a/zuul.d/projects.yaml
+++ b/zuul.d/projects.yaml
@@ -7,3 +7,8 @@
     gate:
       jobs:
         - linters
+
+- project:
+    name: software-factory/firehooks
+    templates:
+      - sf-incubation-jobs
