zuulv3: migrate python-taiga-distgit
Change-Id: I28d5714a81018676aba17732ffa347e9b1e856aa

--- a/zuul.d/projects.yaml
+++ b/zuul.d/projects.yaml
@@ -12,3 +12,8 @@
     name: software-factory/firehooks
     templates:
       - sf-incubation-jobs
+
+- project:
+    name: software-factory/python-taiga-distgit
+    templates:
+      - sf-incubation-jobs
