Add grafyaml package
Change-Id: I861b2c738b8bf31be77757dc8dd57fd0fa3843b5

--- a/sf-master.yaml
+++ b/sf-master.yaml
@@ -497,6 +497,10 @@ packages:
   - name: software-factory/python-os-client-config
     source: external
 
+# Graphyaml
+  - name: software-factory/grafyaml
+    source: external
+
 # Test tools
   - name: software-factory/ansible-lint
     source: external
