--- a/zuul.d/projects.yaml
+++ b/zuul.d/projects.yaml
@@ -17,3 +17,8 @@
     name: software-factory/python-taiga-distgit
     templates:
       - sf-incubation-jobs
+
+- project:
+    name: software-factory/grafyaml-distgit
+    templates:
+      - sf-incubation-jobs
