Add zuul-jobs package
Change-Id: Ib29031e875a9f3ba9997c3c6019f2d450ef3d6b7

--- a/sf-master.yaml
+++ b/sf-master.yaml
@@ -496,6 +496,8 @@ packages:
     source: external
   - name: software-factory/python-os-client-config
     source: external
+  - name: software-factory/zuul-jobs
+    source: external
 
 # Graphyaml
   - name: software-factory/grafyaml
