Add haveged package
Change-Id: I6b7388bc3d5c32368e6e22f3aea6cb4844504a22

--- a/sf-master.yaml
+++ b/sf-master.yaml
@@ -498,6 +498,8 @@ packages:
     source: external
   - name: software-factory/zuul-jobs
     source: external
+  - name: software-factory/haveged
+    source: external
 
 # Graphyaml
   - name: software-factory/grafyaml
