--- a/playbooks/rpmpublish.yaml
+++ b/playbooks/rpmpublish.yaml
@@ -3,7 +3,7 @@
   vars:
     # Get sfinfo location
     sfinfo_path_query: "[?name=='software-factory/sfinfo'].src_dir"
-    sfinfo_path: "{{ (zuul.projects.values() | json_query(sfinfo_path_query))[0] }}"
+    sfinfo_path: "{{ (zuul.projects.values() | list | json_query(sfinfo_path_query))[0] }}"
     # Get workspace path to run zuul_rpm_* commands
     sfnamespace_path: "{{ sfinfo_path | dirname | dirname }}"
   tasks:
