Add sf-jobs template and enable haveged and sf-config
Change-Id: Iaca2388ae2f545951e49460192b2ac61b882139d

--- a/zuul.d/projects.yaml
+++ b/zuul.d/projects.yaml
@@ -31,4 +31,9 @@
 - project:
     name: software-factory/haveged-distgit
     templates:
-      - sf-incubation-jobs
+      - sf-jobs-light
+
+- project:
+    name: software-factory/sf-config
+    templates:
+      - sf-jobs
