Remove sf-config from project
The project template works, let's wait for cutover to enable zuulv3 gate on sf-config

Change-Id: If828f831953f27238958113a569d3a89d08a49c6

--- a/zuul.d/projects.yaml
+++ b/zuul.d/projects.yaml
@@ -33,7 +33,7 @@
     templates:
       - sf-jobs-light
 
-- project:
-    name: software-factory/sf-config
-    templates:
-      - sf-jobs
+#- project:
+#    name: software-factory/sf-config
+#    templates:
+#      - sf-jobs
